--- a/autogenerator/model_template2.j2
+++ b/autogenerator/model_template2.j2
@@ -1,5 +1,5 @@
 # This Jinja2 template generates SQLAlchemy and Pydantic model classes #
-from sqlalchemy import Column, Integer, String, DateTime, ForeignKey, Text, Sequence
+from sqlalchemy import Column, Integer, String, DateTime, ForeignKey, Text, Sequence, Table
 from sqlalchemy.orm import relationship
 from sqlalchemy.ext.declarative import declarative_base
 from pydantic import BaseModel
@@ -11,6 +11,16 @@ from .{{ relation.model|lower }} import {{ relation.model }}DB
 
 Base = declarative_base()
 
+# Association Tables #
+{% for table in association_tables %}
+{{ table.table_name }} = Table(
+    '{{ table.table_name }}', 
+    Base.metadata,
+    {% for column in table.columns -%}
+    Column('{{ column.name }}', {{ column.type }}, ForeignKey('{{ column.foreign_key }}'), primary_key=True),
+    {% endfor -%}
+)
+{% endfor %}
 
 # SQLAlchemy Model
 class {{ model_name }}(Base):
@@ -36,7 +46,11 @@ class {{ model_name }}(Base):
     # Relationships
 {%- endif -%}
 {% for relation in relationships %}
-    {{ relation.model|lower }}s = relationship("{{ relation.model }}", back_populates="{{ relation.back_populates }}")
+    {{ relation.model|lower }}s = relationship("{{ relation.model }}",
+    {%- if relation.secondary -%}
+    secondary="{{ relation.secondary }}",
+    {%- endif -%}
+    back_populates="{{ relation.back_populates }}")
 {% endfor %}
 
 # Pydantic Models
